Update Amazon Price Checker.ipynb

--- a/Amazon Price Checker.ipynb
+++ b/Amazon Price Checker.ipynb
@@ -27,12 +27,7 @@
     "def check_price():\n",
     "    URL = 'https://www.amazon.es/Purina-Felix-Gelatina-comida-gatos/dp/B08WSYSQVL?pd_rd_w=pcWWJ&content-id=amzn1.sym.39a0530e-cdee-46be-8da1-bcc874e212f9&pf_rd_p=39a0530e-cdee-46be-8da1-bcc874e212f9&pf_rd_r=YHPFHF515DR4CBEPVKPB&pd_rd_wg=F6zqN&pd_rd_r=2386a2f0-048a-4b81-9c8b-cca0061ac417&pd_rd_i=B08WSYSQVL&psc=1&ref_=pd_bap_d_grid_rp_0_1_ec_i'\n",
     "\n",
-    "    headers = {\"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/113.0.0.0 Safari/537.36\", \n",
-    "               \"Accept-Encoding\":\"gzip, deflate\", \n",
-    "               \"Accept\":\"text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8\", \n",
-    "               \"DNT\":\"1\",\n",
-    "               \"Connection\":\"close\", \n",
-    "               \"Upgrade-Insecure-Requests\":\"1\"}\n",
+    "    headers = {headers}\n",
     "\n",
     "    page = requests.get(URL, headers=headers)\n",
     "\n",
